# beets-scribe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/beetsplug/: scribe.py
tests/: context.py  test_scribe.py
tests/data/: Category_Cornell, John Henry∕Translator - IMSLP.html  Piano Sonata No.23, Op.57 (Beethoven, Ludwig van) - IMSLP.html  google_failed_resp.json  google_ok_resp.json
