[project]
name = "beets-scribe"
version = "0.1.0"
description = "A plugin for beets to improve western classical music catalogation."
authors = [{ name = "Sergio Moretti", email = "sergio@reliqs.net" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = ["beets (>=2.3.1,<3.0.0)", "beautifulsoup4 (>=4.13.4,<5.0.0)", "requests (>=2.32.4,<3.0.0)"]

[tool.poetry]
packages = [{include = "beetsplug", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "poetry build"
#assets = []
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "github-actions <actions@users.noreply.github.com>"

[tool.semantic_release.commit_parser_options]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true